Bug 1575026 - Remove an assert on Windows. r=bryce

The assert verifies that there is only one preferred device. On windows it is expected to have more than one preferred device so it is removed.

Differential Revision: https://phabricator.services.mozilla.com/D44848

--HG--
extra : moz-landing-system : lando